# NNTranJSTagger

./: CMakeLists.txt  README.md  command.txt
data/: char.vec  mini.bichar.vec  option.debug
data/ctb50/: dev.corpus  test.corpus  train.corpus
src/: CMakeLists.txt
src/NNJSTagger/: CMakeLists.txt  NNJSTagger.cpp
src/NNJSTagger-word/: NNJSTagger.cpp  NNJSTagger.h
src/NNJSTagger-word/model/: Action.h  ActionedNodes.h  AtomFeatures.h  Driver.h  GlobalNodes.h  GreedyGraph.h  HyperParams.h  ModelParams.h  State.h
src/NNJSTagger/model/: Action.h  ActionedNodes.h  AtomFeatures.h  BeamGraph.h  Driver.h  GlobalNodes.h  GreedyGraph.h  HyperParams.h  ModelParams.h  State.h
src/basic/: Argument_helper.h  CTag.h  Instance.h  InstanceReader.h  InstanceWriter.h  Options.h  Pipe.h  Reader.h  Utf.h  Writer.h
